// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkTN_TSVDataRow() empty line should fail 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Found 1 field",
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 861,
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() invalid Original Language 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "",
      "extract": "00",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "f2mg",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should fail invalid first link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "[[rc://en/ta/man/translate/figs-activepassivez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-activepassivez/01.md: Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-activepassivez/01.md",
      "message": "Error loading OccurrenceNote TA link",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "[[rc://en/ta/man/translate/figs-activepassivez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-activepassivez/01.md",
      "message": "Unable to find OccurrenceNote TA link",
      "priority": 886,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should fail invalid second link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "[[rc://en/ta/man/translate/figs-imperativez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-imperativez/01.md: Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-imperativez/01.md",
      "message": "Error loading OccurrenceNote TA link",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "[[rc://en/ta/man/translate/figs-imperativez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-imperativez/01.md",
      "message": "Unable to find OccurrenceNote TA link",
      "priority": 886,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should fail to find OrigLang Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "",
      "extract": "וְ⁠חֹ֖שֶךְ",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find bad ellipse 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "w3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…lipse...",
      "fieldName": "GLQuote",
      "location": " that was supplied",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find invalid Book ID, chapter number, ID, SupportReference, quotes, OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " (expected 'GEN') that was supplied",
      "message": "Wrong 'GIN' book identifier",
      "priority": 978,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "200",
      "location": " that was supplied",
      "message": "Invalid large chapter number",
      "priority": 823,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " '9' that was supplied",
      "message": "Unable to check verse number",
      "priority": 812,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " (not 5) that was supplied",
      "message": "ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied translate/Laugh/01.md: Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading SupportReference TA link",
      "priority": 888,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied translate/Laugh/01.md",
      "message": "Unable to find SupportReference TA link",
      "priority": 889,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " that was supplied",
      "message": "Invalid '17' occurrence field",
      "priority": 792,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…lipse...",
      "fieldName": "GLQuote",
      "location": " that was supplied",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "<br>Boo ho…",
      "fieldName": "OccurrenceNote",
      "filename": "OccurrenceNote",
      "lineNumber": 1,
      "location": " that was supplied",
      "message": "Unexpected leading break",
      "priority": 107,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…o hoo,,<br…",
      "fieldName": "OccurrenceNote",
      "filename": "OccurrenceNote",
      "lineNumber": 1,
      "location": " that was supplied",
      "message": "Unexpected doubled , characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 30,
      "extract": "… shoe !",
      "fieldName": "OccurrenceNote",
      "filename": "OccurrenceNote",
      "lineNumber": 1,
      "location": " that was supplied",
      "message": "Unexpected ! character after space",
      "priority": 191,
      "rowID": "W-3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find invalid SupportReference and missing quotes 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied translate/Laugh/01.md: Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading SupportReference TA link",
      "priority": 888,
      "rowID": "w3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied translate/Laugh/01.md",
      "message": "Unable to find SupportReference TA link",
      "priority": 889,
      "rowID": "w3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find mismatched bookId 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " (expected 'GEN') that was supplied",
      "message": "Wrong 'EXO' book identifier",
      "priority": 978,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find missing Original Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find not TSV 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Found 1 field",
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 861,
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() should find wrong row count 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Found 8 fields",
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 861,
    },
  ],
}
`;
